Update gradle + refactor